--- a/res/layout/sigma_info.xml
+++ b/res/layout/sigma_info.xml
@@ -17,121 +17,297 @@
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center_vertical"
     android:id="@+id/sigma_info"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@id/phone_image"
-        android:layout_width="100dp"
-        android:layout_height="205dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="42dp"
-        android:layout_marginStart="36dp"
-        android:layout_centerVertical="true"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="18dp"
-        app:strokeColor="?android:attr/textColorPrimary"
-        app:strokeWidth="3dp">
-
-        <com.sigma.settings.utils.aboutWallpaperView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:gravity="center"
-            android:elevation="0dp"
-            android:contentDescription="@null"
-            android:orientation="vertical" />
-
-        <com.sigma.settings.widget.WallpaperBlurView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:elevation="0dp"
-            android:gravity="center"
-            android:orientation="vertical" />
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:tint="?android:attr/colorAccent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_settings_sigma" />
-
-    </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="42dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginEnd="26dp"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/phone_image">
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/version_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="@string/version"
-            style="@style/TextAppearance.SigmaInfoTitle" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
 
-        <TextView
-            android:id="@+id/version_message"
+            <LinearLayout
+                android:id="@+id/version_info"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="16dp"
+                android:layout_marginEnd="4dp"
+                android:backgroundTint="@color/sigma_color_accent2"
+                android:background="@drawable/sigma_preference_about"
+                android:gravity="start"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="8dp"
+                    android:src="@drawable/ic_settings_display_op"
+                    android:background="@drawable/about_icon_bg"
+                    android:tint="?android:attr/textColorPrimaryInverse"
+                    />
+                    
+                <TextView
+                android:id="@+id/version_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2.5dp"
+                android:text="@string/version"
+                style="@style/TextAppearance.SigmaInfoTitle" />
+
+                <TextView
+                    android:id="@+id/version_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="2"
+                    android:ellipsize="end"
+                    android:layout_marginBottom="2.5dp"
+                    style="@style/TextAppearance.SigmaInfoSummary" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/device_info"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/sigma_color_secondary_accent"
+                android:background="@drawable/sigma_preference_about"
+                android:layout_marginStart="4dp"
+                android:padding="16dp"
+                android:gravity="start"
+                android:orientation="vertical">
+            
+            
+                <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/ic_storage_op"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/about_icon_bg"
+                android:tint="?android:attr/textColorPrimaryInverse"/>
+            
+                <TextView
+                android:id="@+id/device_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2.5dp"
+                android:text="@string/about_device_name"
+                style="@style/TextAppearance.SigmaInfoTitle" />
+
+                <TextView
+                    android:id="@+id/device_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="2"
+                    android:ellipsize="end"
+                    android:layout_marginBottom="2.5dp"
+                    style="@style/TextAppearance.SigmaInfoSummary" />
+                                
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="14dp"
-            style="@style/TextAppearance.SigmaInfoSummary" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
+            
 
-        <TextView
-            android:id="@+id/build_date_title"
+                <LinearLayout
+                    android:id="@+id/storage_info"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="16dp"
+                    android:layout_marginEnd="4dp"
+                    android:background="@drawable/sigma_preference_about"
+                    android:backgroundTint="@color/sigma_color_secondary_accent"
+                    android:gravity="start"
+                    android:orientation="vertical">
+                
+                        <ImageView
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginBottom="8dp"
+                            android:src="@drawable/ic_storage_op"
+                            android:background="@drawable/about_icon_bg"
+                            android:tint="?android:attr/textColorPrimaryInverse"
+                            />
+
+                        <TextView
+                            android:id="@+id/storage"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="2.5dp"
+                            android:text="@string/storage"
+                            style="@style/TextAppearance.SigmaInfoTitle" />
+
+                        <TextView
+                            android:id="@+id/cust_storage_summary"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLines="2"
+                            android:ellipsize="end"
+                            android:layout_marginBottom="2.5dp"
+                            style="@style/TextAppearance.SigmaInfoSummary" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/battery_info"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:padding="16dp"
+                    android:layout_marginStart="4dp"
+                    android:backgroundTint="@color/sigma_color_accent2"
+                    android:background="@drawable/sigma_preference_about"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="8dp"
+                        android:src="@drawable/ic_settings_battery_op"
+                        android:background="@drawable/about_icon_bg"
+                        android:tint="?android:attr/textColorPrimaryInverse"
+                        />
+
+                    <TextView
+                        android:id="@+id/battery"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/battery"
+                        android:layout_marginBottom="2.5dp"
+                        style="@style/TextAppearance.SigmaInfoTitle" />
+
+                    <TextView
+                        android:id="@+id/cust_battery_summary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="2"
+                        android:ellipsize="end"
+                        android:layout_marginBottom="2.5dp"
+                        style="@style/TextAppearance.SigmaInfoSummary" />
+                
+                </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="@string/build_date"
-            style="@style/TextAppearance.SigmaInfoTitle" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp">
+            
 
-        <TextView
-            android:id="@+id/build_date_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="14dp"
-            style="@style/TextAppearance.SigmaInfoSummary" />
+                <LinearLayout
+                    android:id="@+id/chipset_info"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:padding="16dp"
+                    android:layout_marginEnd="4dp"
+                    android:background="@drawable/sigma_preference_about"
+                    android:backgroundTint="@color/sigma_color_accent2"
+                    android:gravity="start"
+                    android:orientation="vertical">
+                
+                        <ImageView
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginBottom="8dp"
+                            android:src="@drawable/ic_settings_memory"
+                            android:background="@drawable/about_icon_bg"
+                            android:tint="?android:attr/textColorPrimaryInverse"
+                            />
 
-        <TextView
-            android:id="@+id/release_type_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="@string/sigma_release_type_title"
-            style="@style/TextAppearance.SigmaInfoTitle" />
+                        <TextView
+                            android:id="@+id/chipset"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="2.5dp"
+                            android:text="@string/chipset"
+                            style="@style/TextAppearance.SigmaInfoTitle" />
 
-        <TextView
-            android:id="@+id/release_type_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="14dp"
-            style="@style/TextAppearance.SigmaInfoSummary" />
+                        <TextView
+                            android:id="@+id/cust_chipset_summary"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLines="2"
+                            android:ellipsize="end"
+                            android:layout_marginBottom="2.5dp"
+                            style="@style/TextAppearance.SigmaInfoSummary" />
 
-        <TextView
-            android:id="@+id/maintainer_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="@string/sigma_maintainer_title"
-            style="@style/TextAppearance.SigmaInfoTitle" />
+                </LinearLayout>
 
-        <TextView
-            android:id="@+id/maintainer_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextAppearance.SigmaInfoSummary" />
+                <LinearLayout
+                    android:id="@+id/display_info"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:padding="16dp"
+                    android:layout_marginStart="4dp"
+                    android:backgroundTint="@color/sigma_color_secondary_accent"
+                    android:background="@drawable/sigma_preference_about"
+                    android:orientation="vertical">
 
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="8dp"
+                        android:src="@drawable/ic_settings_display_op"
+                        android:background="@drawable/about_icon_bg"
+                        android:tint="?android:attr/textColorPrimaryInverse"
+                        />
+
+                    <TextView
+                        android:id="@+id/display"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/display"
+                        android:layout_marginBottom="2.5dp"
+                        style="@style/TextAppearance.SigmaInfoTitle" />
+
+                    <TextView
+                        android:id="@+id/cust_display_summary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="2"
+                        android:ellipsize="end"
+                        android:layout_marginBottom="2.5dp"
+                        style="@style/TextAppearance.SigmaInfoSummary" />
+                
+                </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
