--- a/res/values/sigma_colors.xml
+++ b/res/values/sigma_colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="rdnt_crd_bg">#00000000</color>
     <color name="user_crd_bg">@android:color/system_neutral1_0</color>
-
+    <color name="settingsHeaderColor">@*android:color/accent_device_default_light</color>
     <color name="xd_background1">@android:color/system_neutral1_50</color>
     <color name="xd_background2">@android:color/system_neutral1_100</color>
+    <color name="oneplus_accent_color">@color/settingsHeaderColor</color>
+    <color name="settings_accent_color">@color/oneplus_accent_color</color>
 </resources>
