--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -21,13 +21,9 @@
     android:key="my_device_info_pref_screen"
     android:title="@string/about_settings">
 
-    <com.android.settingslib.widget.LayoutPreference
-        android:key="device_name"
-        android:order="-1"
-        android:selectable="false"
-        android:layout="@layout/device_info_header"
-        settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
-        settings:isPreferenceVisible="false" />
+        <Preference
+            android:order="18"
+            android:title="@string/hardware_info_title"/>
 
         <!-- SigmaDroid info -->
         <com.android.settingslib.widget.LayoutPreference
@@ -48,20 +44,70 @@
             android:order="4"
             android:selectable="true"/>
 
+        <!-- Device Information -->
+        <Preference
+            android:key="device_model"
+            android:order="6"
+            android:title="@string/sigma_model_info"
+            android:icon="@drawable/ic_model_hardware"
+            android:summary="@string/summary_placeholder"
+            android:fragment="com.android.settings.deviceinfo.hardwareinfo.HardwareInfoFragment"
+            settings:enableCopying="true"
+            settings:keywords="@string/keywords_model_and_hardware"
+            settings:controller="com.android.settings.deviceinfo.HardwareInfoPreferenceController"/> 
+
+        <!-- Phone number -->
+        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
+            android:key="phone_number"
+            android:order="8"
+            android:title="@string/status_number"
+            android:icon="@drawable/phone_tint"
+            android:order="11"
+            android:summary="@string/summary_placeholder"
+            settings:isPreferenceVisible="@bool/config_show_sim_info"
+            settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"
+            settings:enableCopying="true"/>
+
+       <!-- Device up time -->
+        <Preference
+            android:key="up_time"
+            android:order="12"
+            android:icon="@drawable/ic_cog"
+            android:title="@string/status_up_time"
+            android:summary="@string/summary_placeholder" />
+
+        <!-- Device deep sleep time -->
+        <Preference
+            android:key="sleep_time"
+            android:order="13"
+            android:icon="@drawable/ic_sleep"
+            android:title="@string/status_sleep_time"
+            android:summary="@string/summary_placeholder" />
+
          <!-- Device name -->
         <com.android.settings.widget.ValidatedEditTextPreference
             android:key="device_name"
-            android:order="5"
+            android:order="14"
             android:icon="@drawable/phone_tint"
             android:title="@string/my_device_info_device_name_preference_title"
             android:summary="@string/summary_placeholder"
             settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
             settings:enableCopying="true"/>
 
+        <!-- Account name -->
+        <Preference
+            android:key="branded_account"
+            android:order="15"
+            android:icon="@drawable/ic_cog"
+            android:title="@string/my_device_info_account_preference_title"
+            android:summary="@string/summary_placeholder"
+            settings:enableCopying="true"
+            settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>
+
         <!-- Build number -->
         <Preference
             android:key="build_number"
-            android:order="6"
+            android:order="16"
             android:icon="@drawable/ic_info"
             android:title="@string/build_number"
             android:summary="@string/summary_placeholder"
@@ -71,253 +117,11 @@
         <!-- Kernel -->
         <com.android.settings.deviceinfo.firmwareversion.KernelVersionPreference
             android:key="kernel_version"
-            android:order="7"
+            android:order="17"
             android:title="@string/kernel_version"
             android:summary="@string/summary_placeholder"
             android:icon="@drawable/ic_kernel"
             settings:enableCopying="true"
             settings:controller="com.android.settings.deviceinfo.firmwareversion.KernelVersionPreferenceController"/>
-
-        <!-- SELinux -->
-        <Preference
-            android:key="selinux_status"
-            android:order="8"
-            android:title="@string/selinux_status"
-            android:summary="@string/summary_placeholder"
-            android:icon="@drawable/ic_selinux"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.SElinuxStatusPreferenceController"/>
-
-        <!-- Android version -->
-        <Preference
-            android:key="firmware_version"
-            android:order="9"
-            android:icon="@drawable/ic_android_head"
-            android:title="@string/firmware_version"
-            android:summary="@string/summary_placeholder"
-            android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
-        
-        <!-- Account name -->
-        <Preference
-            android:key="branded_account"
-            android:order="10"
-            android:icon="@drawable/ic_cog"
-            android:title="@string/my_device_info_account_preference_title"
-            android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>
-
-        <!-- Phone number -->
-        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
-            android:key="phone_number"
-            android:title="@string/status_number"
-            android:icon="@drawable/phone_tint"
-            android:order="11"
-            android:summary="@string/summary_placeholder"
-            settings:isPreferenceVisible="@bool/config_show_sim_info"
-            settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"
-            settings:enableCopying="true"/>
-
-        <!-- Security patch -->
-        <Preference
-            android:key="security_key"
-            android:order="13"
-            android:title="@string/security_patch"
-            android:icon="@drawable/ic_security_patch"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.SecurityPatchLevelPreferenceController"/>
-
-       <!-- Device up time -->
-        <Preference
-            android:key="up_time"
-            android:order="14"
-            android:icon="@drawable/ic_cog"
-            android:title="@string/status_up_time"
-            android:summary="@string/summary_placeholder" />
-
-        <!-- Device deep sleep time -->
-        <Preference
-            android:key="sleep_time"
-            android:order="15"
-            android:icon="@drawable/ic_sleep"
-            android:title="@string/status_sleep_time"
-            android:summary="@string/summary_placeholder" />
-
-        <Preference
-            android:order="16"
-            android:title="@string/my_device_info_device_identifiers_category_title"/>
-        
-        <!-- SIM status -->
-        <Preference
-            android:key="legal_container"
-            android:order="15"
-            android:title="@string/legal_information"
-            android:fragment="com.android.settings.LegalSettings"/>
-
-        <!-- IMEI -->
-        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
-            android:key="imei_info"
-            android:order="21"
-            android:title="@string/status_imei"
-            android:icon="@drawable/phone_tint"
-            android:summary="@string/summary_placeholder"
-            settings:keywords="@string/keywords_imei_info"
-            settings:enableCopying="true"
-            settings:isPreferenceVisible="@bool/config_show_sim_info"
-            settings:controller="com.android.settings.deviceinfo.imei.ImeiInfoPreferenceController"/>
-
-        <!-- Safety & regulatory manual -->
-        <Preference
-            android:key="safety_info"
-            android:order="17"
-            android:title="@string/safety_and_regulatory_info"/>
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="device_detail_category"
-        android:selectable="false"
-        android:title="@string/my_device_info_device_details_category_title">
-
-        <Preference
-            android:title="@string/radio_info_title"
-            android:key="radio_info_settings"
-            android:order="23"
-            android:icon="@drawable/phone_tint"
-            settings:controller="com.android.settings.deviceinfo.RadioInfoPreferenceController">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.android.phone"
-                    android:targetClass="com.android.phone.settings.RadioInfo" />
-        </Preference>
-
-
-        <!-- SIM status -->
-        <Preference
-            android:key="sim_status"
-            android:order="18"
-            android:title="@string/sim_status_title"
-            settings:keywords="@string/keywords_sim_status"
-            android:summary="@string/summary_placeholder"
-            settings:isPreferenceVisible="@bool/config_show_sim_info"
-            settings:enableCopying="true"/>
-
-        <!-- Model & hardware -->
-        <Preference
-            android:key="device_model"
-            android:order="31"
-            android:title="@string/model_info"
-            android:summary="@string/summary_placeholder"
-            android:fragment="com.android.settings.deviceinfo.hardwareinfo.HardwareInfoFragment"
-            settings:enableCopying="true"
-            settings:keywords="@string/keywords_model_and_hardware"
-            settings:controller="com.android.settings.deviceinfo.HardwareInfoPreferenceController"/>
-
-        <!-- IMEI -->
-        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
-            android:key="imei_info"
-            android:order="32"
-            android:title="@string/status_imei"
-            android:summary="@string/summary_placeholder"
-            settings:keywords="@string/keywords_imei_info"
-            settings:enableCopying="true"
-            settings:isPreferenceVisible="@bool/config_show_sim_info"
-            settings:controller="com.android.settings.deviceinfo.imei.ImeiInfoPreferenceController"/>
-
-        <!-- Android version -->
-        <Preference
-            android:key="firmware_version"
-            android:order="42"
-            android:title="@string/firmware_version"
-            android:summary="@string/summary_placeholder"
-            android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:title="@string/my_device_info_device_identifiers_category_title">
-
-        <!--IP address -->
-        <Preference
-            android:key="wifi_ip_address"
-            android:order="24"
-            android:icon="@drawable/ic_settings_wireless"
-            android:title="@string/wifi_ip_address"
-            android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"/>
-
-        <!-- Wi-Fi MAC address -->
-        <Preference
-            android:key="saved_accesspoints_wifi_mac_address"
-            android:order="25"
-            android:icon="@drawable/ic_settings_wireless"
-            android:title="@string/status_wifi_mac_address"
-            android:summary="@string/view_saved_network"
-            android:fragment="com.android.settings.wifi.savedaccesspoints2.SavedAccessPointsWifiSettings2"
-            settings:enableCopying="false"/>
-
-        <!-- Factory Wi-Fi MAC address -->
-        <Preference
-            android:key="wifi_mac_address"
-            android:order="26"
-            android:icon="@drawable/ic_settings_wireless"
-            android:title="@string/status_device_wifi_mac_address"
-            android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"/>
-
-        <!-- Bluetooth address -->
-        <Preference
-            android:key="bt_address"
-            android:order="27"
-            android:icon="@drawable/ic_bluetooth_disabled"
-            android:title="@string/status_bt_address"
-            android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"/>
-
-        <!-- Device up time -->
-        <Preference
-            android:key="up_time"
-            android:order="48"
-            android:title="@string/status_up_time"
-            android:summary="@string/summary_placeholder" />
-
-        <!-- Device deep sleep time -->
-        <Preference
-            android:key="sleep_time"
-            android:order="49"
-            android:title="@string/status_sleep_time"
-            android:summary="@string/summary_placeholder" />
-
-        <!-- Manual -->
-        <Preference
-            android:key="manual"
-            android:order="50"
-            android:title="@string/manual">
-            <intent android:action="android.settings.SHOW_MANUAL"/>
-        </Preference>
-
-        <!-- Feedback on the device -->
-        <Preference
-            android:key="device_feedback"
-            android:order="51"
-            android:title="@string/device_feedback"
-            settings:keywords="@string/keywords_device_feedback"/>
-
-        <!-- Device FCC equipment id -->
-        <Preference
-            android:key="fcc_equipment_id"
-            android:order="52"
-            android:title="@string/fcc_equipment_id"
-            android:summary="@string/summary_placeholder"/>
-
-        <!-- Build number -->
-        <Preference
-            android:key="build_number"
-            android:order="53"
-            android:title="@string/build_number"
-            android:summary="@string/summary_placeholder"
-            settings:enableCopying="true"
-            settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
-    </PreferenceCategory>
 
 </PreferenceScreen>
