--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -45,6 +45,22 @@
             settings:enableCopying="true"
             settings:controller="com.android.settings.deviceinfo.BrandedAccountPreferenceController"/>
 
+        <!-- Phone number -->
+        <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
+            android:key="phone_number"
+            android:order="3"
+            android:title="@string/status_number"
+            android:summary="@string/summary_placeholder"
+            settings:isPreferenceVisible="@bool/config_show_sim_info"
+            settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"
+            settings:enableCopying="true"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="device_detail_category"
+        android:selectable="false"
+        android:title="@string/my_device_info_device_details_category_title">
+
         <!-- SIM status -->
         <com.android.settings.preferences.ui.AdaptivePreference
             android:key="sim_status"
@@ -99,18 +115,6 @@
             settings:position="middle"
             android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
             settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
-
-        <!-- Lineage version -->
-        <com.android.settings.preferences.ui.AdaptivePreference
-            android:key="lineage_os_version"
-            android:order="43"
-            android:title="@*lineageos.platform:string/lineage_version"
-            android:summary="@string/summary_placeholder"
-            android:icon="@drawable/ic_matrixx"
-            settings:position="bottom"
-            settings:enableCopying="false"
-            android:selectable="false"
-            settings:controller="com.android.settings.deviceinfo.firmwareversion.LineageVersionDetailPreferenceController"/>
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -146,24 +150,6 @@
             android:summary="@string/summary_placeholder"
             settings:position="middle"
             android:selectable="false"/>
-
-        <!-- Manual -->
-        <com.android.settings.preferences.ui.AdaptivePreference
-            android:key="manual"
-            android:order="50"
-            settings:position="solo"
-            android:title="@string/manual">
-            <intent android:action="android.settings.SHOW_MANUAL"/>
-        </com.android.settings.preferences.ui.AdaptivePreference>
-
-        <!-- Device FCC equipment id -->
-        <com.android.settings.preferences.ui.AdaptivePreference
-            android:key="fcc_equipment_id"
-            android:order="52"
-            android:icon="@drawable/ic_equipment"
-            settings:position="middle"
-            android:title="@string/fcc_equipment_id"
-            android:summary="@string/summary_placeholder"/>
 
         <!-- Build number -->
         <com.android.settings.preferences.ui.AdaptivePreference
