--- a/res/layout/hide_developer_status_layout.xml
+++ b/res/layout/hide_developer_status_layout.xml
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="24dp">
+        android:layout_marginBottom="24dp" />
 
          <ImageView
             android:layout_width="wrap_content"
